--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sweetalert2": "^10.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000/api"
+  }
 }
